--- a/lams_monitoring/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:22:06 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Sep 04 14:21:27 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -459,6 +459,17 @@ email.notifications.archived.messages.list.learners  =\u03b5\u03ba\u03c0\u03b1\u
 label.gate.gate.open.user  =\u03b1\u03c0\u03cc {0}
 lesson.end  =\u03a4\u03ad\u03bb\u03bf\u03c2:
 error.lesson.end.date.must.be.after.start.date  =\u0397 \u03c0\u03c1\u03bf\u03b3\u03c1\u03b1\u03bc\u03bc\u03b1\u03c4\u03b9\u03c3\u03bc\u03ad\u03bd\u03b7 \u03b7\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1 \u03bb\u03ae\u03be\u03b7\u03c2 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03bc\u03b5\u03c4\u03ac \u03c4\u03b7\u03bd \u03b7\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1 \u03ad\u03bd\u03b1\u03c1\u03be\u03b7\u03c2.
+label.countdown.timer  =\u03a7\u03c1\u03bf\u03bd\u03cc\u03bc\u03b5\u03c4\u03c1\u03bf \u03b1\u03bd\u03c4\u03af\u03c3\u03c4\u03c1\u03bf\u03c6\u03b7\u03c2 \u03bc\u03ad\u03c4\u03c1\u03b7\u03c3\u03b7\u03c2
+label.enter.countdown.time  =\u039a\u03b1\u03c4\u03b1\u03c7\u03ce\u03c1\u03b9\u03c3\u03b7 \u03c7\u03c1\u03cc\u03bd\u03bf\u03c5 \u03b1\u03bd\u03c4\u03af\u03c3\u03c4\u03c1\u03bf\u03c6\u03b7\u03c2 \u03bc\u03ad\u03c4\u03c1\u03b7\u03c3\u03b7\u03c2:
+label.start  =\u0388\u03bd\u03b1\u03c1\u03be\u03b7
+label.countdown.time.left  =\u03a5\u03c0\u03bf\u03bb\u03b5\u03b9\u03c0\u03cc\u03bc\u03b5\u03bd\u03bf\u03c2 \u03c7\u03c1\u03cc\u03bd\u03bf\u03c2:
+label.stop  =\u0394\u03b9\u03b1\u03ba\u03bf\u03c0\u03ae
+label.resume  =\u03a3\u03c5\u03bd\u03ad\u03c7\u03b9\u03c3\u03b7
+label.hours  =\u03a9\u03c1\u03b5\u03c2
+label.minutes  =\u039b\u03b5\u03c0\u03c4\u03ac
+label.seconds  =\u0394\u03b5\u03c5\u03c4\u03b5\u03c1\u03cc\u03bb\u03b5\u03c0\u03c4\u03b1
+label.reset  =\u0395\u03c0\u03b1\u03bd\u03b1\u03c6\u03bf\u03c1\u03ac
+label.time.is.expired  =\u039f \u03c7\u03c1\u03cc\u03bd\u03bf\u03c2 \u03ad\u03c7\u03b5\u03b9 \u03bb\u03ae\u03be\u03b5\u03b9.
 
 
-#======= End labels: Exported 453 labels for el GR =====
+#======= End labels: Exported 464 labels for el GR =====
