--- a/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:30:37 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Sep 04 14:23:47 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -108,7 +108,7 @@ confirmMsg.4.txt  ={0} instancias de {1} han sido creadas.
 wizard.splitLearners.splitSum  ={0} instancias de esta lecci\u00f3n ser\u00e1n creadas y aproximadamente contendr\u00e1n {1} estudiantes en cada lecci\u00f3n.
 wizard.splitLearners.LearnersPerLesson.lbl  =N\u00famero de estudiantes por lecci\u00f3n:
 wizard.splitLearners.cb.lbl  =\u00bfDividir estudiantes en distintas copias de esta lecci\u00f3n?
-wizard.learner.enLiveEdit.cb.lbl  =Habilitar Edici\u00f3n en Vivo
+wizard.learner.enLiveEdit.cb.lbl  =Activar Edici\u00f3n en Vivo
 wizard.learner.enpres.cb.lbl  =Permitir ver que estudiantes est\u00e1n conectados
 wizard.wkspc.date.modified.lbl  =\u00daltima modificaci\u00f3n: {0}
 staff.lbl  =Tutores {0}
@@ -118,7 +118,7 @@ class.tab.label  =Curso
 advanced.tab.label  =Otras opciones
 lesson.tab.heading.label  =Seleccione la secuencia para la que desea crear la leccion y luego presione "Crear Lecci\u00f3n"
 advanced.tab.form.advanced.options.label  =Otras Opciones
-advanced.tab.form.enable.im.label  =Habilitar Mensajes Instantaneos
+advanced.tab.form.enable.im.label  =Activar Mensajes Instant\u00e1neos
 advanced.tab.form.scheduling.label  =Comenzar en fecha espec\u00edfica
 advanced.tab.form.enable.label  =Activar
 advanced.tab.form.validation.no.learners.error  =No se han a\u00f1adido estudianes, por favor incluya estudiantes.
@@ -155,7 +155,7 @@ email.notifications.lesson  =Seleccione lecci\u00f3n
 email.notifications.lessons  =Seleccione lecciones
 error.emailnotifications.email.subject  =Notificaci\u00f3n LAMS
 email.notifications.emails.successfully.sent  =Los correos electr\u00f3nicos han sido enviados con \u00e9xito a los estudiantes seleccionados.
-advanced.tab.enable.lesson.notifications  =Habilitar las notificaciones para lecciones
+advanced.tab.enable.lesson.notifications  =Activar las notificaciones para lecciones
 email.notifications.by.this.date  =Para esta fecha:
 email.notifications.emails.successfully.scheduled  =Los correos electr\u00f3nicos han sido exitosamente programados para ser enviado en la fecha especificada.
 email.notifications.scheduled.messages.list  =Lista de e-mails programados
@@ -204,8 +204,8 @@ button.start.now.tooltip  =Comience la lecci\u00f3n inmediatamente
 lesson.enable.presence  =Permitir a los estudiantes a ver qui\u00e9n est\u00e1 conectados
 lesson.enable.presence.alert  =Ahora los estudiantes pueden ver qui\u00e9n est\u00e1 conectados
 lesson.disable.presence.alert  =Ahora los estudiantes no pueden ver qui\u00e9n est\u00e1 conectados
-lesson.enable.im  =Habilitar mensajer\u00eda instant\u00e1nea
-lesson.enable.im.alert  =Mensajer\u00eda instant\u00e1nea est\u00e1 habilitada
+lesson.enable.im  =Activar mensajer\u00eda instant\u00e1nea
+lesson.enable.im.alert  =Mensajer\u00eda instant\u00e1nea est\u00e1 activada
 lesson.disable.im.alert  =Mensajer\u00eda instant\u00e1nea est\u00e1 desactivada
 lesson.required.tasks  =Tareas requeridas
 lesson.task.gate  =Puerta de Permiso
@@ -470,6 +470,7 @@ label.minutes  =Minutos
 label.seconds  =Segundos
 label.reset  =Reiniciar
 label.time.is.expired  =El tiempo ha finalizado
+lesson.task.tool  =Contribuci\u00f3n para la herramienta
 
 
-#======= End labels: Exported 464 labels for es ES =====
+#======= End labels: Exported 465 labels for es ES =====
