--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:30:38 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Sep 04 14:23:50 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -470,6 +470,7 @@ label.minutes  =Minutes
 label.seconds  =Seconds
 label.reset  =Reset
 label.time.is.expired  =Time has expired.
+lesson.task.tool  =Tool contribution
 
 
-#======= End labels: Exported 464 labels for en AU =====
+#======= End labels: Exported 465 labels for en AU =====
