--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -626,6 +626,7 @@ admin.email.verify.desc  =(a verification email will be send before user can log
 config.smtp.port  =SMTP port
 config.smtp.auth.security  =SMTP authentication security
 config.server.country  =Country
+config.enable.portrait.editing  =Enable profile portrait editing
 
 
 #======= End labels: Exported 620 labels for en AU =====
