LDEV-4658: Adding label

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 30 15:53:50 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Sep 08 03:30:29 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -633,5 +633,8 @@ sysadmin.lesson.presence  =Allow learners to see who is online
 sysadmin.lesson.im  =Enable Instant Messaging
 sysadmin.lesson.force.restart  =Learners always start from the first activity
 sysadmin.lesson.allow.restart  =Learners can restart the lesson
-sysadmin.lesson.default =Lesson default settings
-#======= End labels: Exported 620 labels for en AU =====
+sysadmin.lesson.default  =Lesson default settings
+config.enable.portrait.editing  =Enable profile portrait editing
+
+
+#======= End labels: Exported 629 labels for en AU =====
