--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 30 15:53:50 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Sep 08 03:30:29 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -626,7 +626,15 @@ admin.email.verify.desc  =(a verification email will be send before user can log
 config.smtp.port  =SMTP port
 config.smtp.auth.security  =SMTP authentication security
 config.server.country  =Country
+sysadmin.lesson.gradebook.complete  =Display activity scores on completion
+sysadmin.lesson.liveedit  =Enable Live Edit
+sysadmin.lesson.notification  =Enable lesson notifications
+sysadmin.lesson.presence  =Allow learners to see who is online
+sysadmin.lesson.im  =Enable Instant Messaging
+sysadmin.lesson.force.restart  =Learners always start from the first activity
+sysadmin.lesson.allow.restart  =Learners can restart the lesson
+sysadmin.lesson.default  =Lesson default settings
 config.enable.portrait.editing  =Enable profile portrait editing
 
 
-#======= End labels: Exported 620 labels for en AU =====
+#======= End labels: Exported 629 labels for en AU =====
