--- a/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:20:40 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Sep 08 03:30:10 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -626,6 +626,15 @@ admin.email.verify.desc  =(se enviar\u00e1 un correo electr\u00f3nico de verific
 config.smtp.port  =Puerto de SMTP
 config.smtp.auth.security  =Seguridad de autenticaci\u00f3n SMTP
 config.server.country  =Pa\u00eds
+sysadmin.lesson.gradebook.complete  =Mostrar puntajes de actividades al finalizar
+sysadmin.lesson.liveedit  =Activar Edici\u00f3n en Vivo
+sysadmin.lesson.notification  =Activar notificaciones para lecciones
+sysadmin.lesson.presence  =Permitir a los estudiantes a ver qui\u00e9n est\u00e1 conectados
+sysadmin.lesson.im  =Activar mensajer\u00eda instant\u00e1nea
+sysadmin.lesson.force.restart  =Empezar lecci\u00f3n siempre desde la primer actividad
+sysadmin.lesson.allow.restart  =Activar opci\u00f3n para recomenzar la lecci\u00f3n desde el principio
+sysadmin.lesson.default  =Configuraci\u00f3n predeterminada de la lecciones
+config.enable.portrait.editing  =Permitir editar foto de perfil.
 
 
-#======= End labels: Exported 620 labels for es ES =====
+#======= End labels: Exported 629 labels for es ES =====
