--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -174,7 +174,7 @@ label.monitoring.question.summary.default.mark  =Default mark
 label.monitoring.question.summary.penalty  =Penalty
 label.monitoring.question.summary.average.mark  =Average mark
 label.monitoring.question.summary.group  =Group:
-label.monitoring.question.summary.ok  =Ok
+label.monitoring.question.summary.ok  =Close
 output.desc.learner.total.score  =Last total score
 output.desc.learner.time.taken  =Time taken
 output.desc.learner.number.of.attempts  =Number of attempts
