LDEV-4440 Migrate Planner to Spring MVC
Also several minor fixes to Planner logic

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -722,6 +722,7 @@ index.kumalive.tooltip  =Enter a live lesson
 index.kumalive.enter.learner  =Enter as a learner
 index.kumalive.report  =Reports
 index.kumalive.rubric  =Rubrics management
+index.planner =Planner
 label.import.groups.from.template  =Import groups from template
 label.import.groups.from.template.description  =Download the template spreadsheet to create your groups using all the present learners in this lesson/course. Once you upload the file, the groups will be automatically created according to the spreadsheet.
 label.download.template  =Download Template
