LDEV-4689 Live Edit has a contribution entry and button changes colour.
Also fixed the SVG rendering in monitor (did not return 404 properly
when missing) and fixed the path for the monitor chosen grouping page.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -560,6 +560,7 @@ authoring.fla.page.menu.import  =Import
 authoring.fla.page.menu.import.part  =Import part
 authoring.fla.page.menu.save  =Save
 authoring.fla.page.menu.saveas  =Save as
+authoring.fla.page.menu.apply.changes  =Apply Changes
 authoring.fla.page.menu.export.lams  =Export
 authoring.fla.page.menu.copy  =Copy
 authoring.fla.page.menu.paste  =Paste
