LDEV-4689 Save works, can edit acts after gate, learner msg improvement

--- a/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
@@ -1,3 +1,5 @@
+message.progress.broken  =Your teacher is currently editing the lesson. As soon as the changes are applied you will be able to continue. 
+message.progress.broken.try.resume  =Close and reopen this window to continue. If this message re-occurs, wait a few minutes and then try again.
 appName = learner_java 
 #language code: en 
 #locale code: AU 
@@ -51,8 +53,8 @@ mynotes.entry.submitted.by  =Submitted by: {0}
 label.close.button  =Close
 mynotes.journals.title  =Journals
 mynotes.entry.no.title.label  =No title
-message.progress.broken  =An error has occurred and you cannot continue without LAMS recalculating your current activity. A staff member may be editing the lesson.
-message.progress.broken.try.resume  =Close and reopen this window to continue. If this error re-occurs, wait a few minutes and then try again.
+message.progress.broken  =Your teacher is currently editing the lesson. As soon as the changes are applied you will be able to continue. 
+message.progress.broken.try.resume  =Close and reopen this window to continue. If this message re-occurs, wait a few minutes and then try again.
 label.branching.wait.message  =You have stopped at a branching point. You cannot continue until your branch is allocated in Monitoring.
 label.branching.refresh.message  =Click Next if you are told that the branch has been selected. This page will refresh automatically in 1 minute.
 label.branching.preview.message  =You have reached a branching activity. As you are in preview you can select which branch to preview then click Choose. Click Finish to skip the branching and continue with the next activity after the branching.
