--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -512,6 +512,7 @@ error.attachment.not.xls  =File is not an Excel .xls file.
 sysadmin.maintain.session  =Logged in users
 sysadmin.maintain.session.login  =Login
 sysadmin.maintain.session.id  =Session ID
+sysadmin.maintain.session.name =Name
 error.portrait.removal.failed  =Unable to delete portrait. See error file for details
 label.delete.portrait  =Delete portrait
 sysadmin.maintain.session.delete  =Delete
