LDEV-4697 Audit entries filtering by user and remarks

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -634,5 +634,5 @@ outcome.authoring.title =Learning outcomes
 outcome.authoring.input =Search and select by outcome name or code
 outcome.authoring.existing =Added outcomes
 outcome.authoring.existing.none =none
-
+label.search  =Search...
 #======= End labels: Exported 629 labels for en AU =====
