LDEV-4708 update marks more skillfully after edit in monitor

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -338,6 +338,7 @@ label.disclose.groups.answers  =Disclose groups' answers
 label.disclose.all.correct.answers  =Disclose all correct answers
 label.disclose.all.groups.answers  =Disclose all groups' answers
 label.prefix.sequential.letters.for.each.answer  =Prefix sequential letters for each answer
+label.edit.in.monitor.warning  =Attention: while you edit this assessment students don't have access to it. You must save your changes so students can re-attempt this assessment again.
 
 
 #======= End labels: Exported 332 labels for en AU =====
