LDEV-4710 Add config setting to enable "Forgot your password?" option
Also if people try to get to the login page by going to the URL
directly, we display a 404 error message.

--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -635,6 +635,7 @@ sysadmin.lesson.force.restart  =Learners always start from the first activity
 sysadmin.lesson.allow.restart  =Learners can restart the lesson
 sysadmin.lesson.default  =Lesson default settings
 config.enable.portrait.editing  =Enable profile portrait editing
+config.enable.forgot.your.password.link  =Enable "Forgot your password" link at the login page
 
 
 #======= End labels: Exported 629 labels for en AU =====
