LDEV-4711 Show only generic message when resetting passwords

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -180,7 +180,9 @@ label.forgot.password.confirm  =Password request
 forgot.password.email.subject  =LAMS server - Forgot password response
 forgot.password.email.body  =Click the link below and it will take you to a page where you can change your password.
 forgot.password.email.sent  =An email has been sent to your email address.
-error.user.not.found  =Unable to find the username in LAMS. Please check your username and try again.
+forgot.password.request.processed =If the email/username that you have provided exists, an email would be sent to the registered email address.
+
+
 error.support.email.not.set  =Email could not be sent. The LAMS server has not been configured to handle emails. Please contact your system administrator.
 error.password.request.expired  =This request for a new password has expired. Please click the "Forgot your Password" link again to make a new request.
 label.forgot.password.instructions.1  =Please enter your user name or email below. An email will be sent to you shortly with a link that will allow you to change your password. You only need to enter one value.
@@ -189,7 +191,6 @@ label.forgot.password.email  =By email
 label.forgot.password.username  =By username
 error.forgot.password.fields  =Both fields are required. Please try again.
 error.email.not.sent  =Server failed to send email to recipient. Please contact your system administrator.
-error.email.not.found  =Unable to find a user that matches the given email. Please check your email address and try again.
 error.forgot.password.email  =Please enter an email address.
 error.forgot.password.username  =Please enter a username.
 button.select.another.importfile  =Select another file to import
