LDEV-4644: Adding labels for learning outcomes.

--- a/lams_tool_leader/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:44:56 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Dec 05 23:39:24 CST 2018 
  
 #=================== labels for Leader selection =================# 
 
@@ -59,6 +59,11 @@ heading.leader  =Group leader
 monitoring.label.group  =Group
 label.no.leader.yet.title  =No leader has been chosen yet
 label.no.leader.yet.body  =Once a leader is selected, you will be able to continue to the next activity
+output.desc.leader.user.id  =User ID
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 53 labels for en AU =====
+#======= End labels: Exported 58 labels for en AU =====
