--- a/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 05:00:46 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Dec 05 23:39:22 CST 2018 
  
 #=================== labels for Leader selection =================# 
 
@@ -59,6 +59,11 @@ heading.leader  =L\u00edder del grupo: {0}
 monitoring.label.group  =Grupo
 label.no.leader.yet.title  =No se ha seleccionado l\u00edder
 label.no.leader.yet.body  =Una vez que el l\u00edder haya sido seleccionado, podr\u00e1 avanzar a la siguiente actividad.
+output.desc.leader.user.id  =Usuario
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione por nombre de objetivo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 53 labels for es ES =====
+#======= End labels: Exported 58 labels for es ES =====
