LDEV-4709 Monitoring gate pages have select/unselect all checkboxes

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -69,7 +69,7 @@ label.condition.gate.title  =Condition gate
 label.gate.allow  =Allow to pass
 label.gate.open.single.learner  =You may allow a single learner to pass the gate
 label.gate.list.all.learners  =Forbidden to pass
-label.gate.list.waiting.learners  =Waiting in front of the gate
+label.gate.list.waiting.learners  =Waiting at the gate
 label.gate.list.allowed.learners  =Allowed to pass
 label.grouping.status  =Status:
 label.grouping.functions  =Group functions:
