--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -891,4 +891,7 @@ authoring.tbl.template.description=Individual and Team Readiness Assessments fol
 authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions. Turn on "Enable confidence levels" to have the learners' confidence levels from the iRA shown on the tRA screen.
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
+
 #======= End labels: Exported 786 labels for en AU =====
+
+label.view=View
