LDEV-4739 updating labels for Forum
English, Spanish and Greek

--- a/lams_tool_forum/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:33:40 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 22:32:49 CST 2018 
  
 #=================== labels for Forum =================# 
 
@@ -246,6 +246,10 @@ label.post.anonomously  =Post anonymously
 label.anonymous  =Anonymous
 label.anonymous.tooltip  =Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name.
 label.marks.released  =Marks have been released
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 240 labels for en AU =====
+#======= End labels: Exported 244 labels for en AU =====
