LDEV-4739 updating lablels for MCQ
Updating English, Greek, Norwegian and English

--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:46:02 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 22:45:28 CST 2018 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -228,6 +228,12 @@ label.displayNoAnswersOrFeedback  =Do not display answers, score or feedback
 label.monitoring.yesDisplayFeedbackOnly  =Learners are able to see the feedback but no answers or scores for the questions.
 label.monitoring.noDisplayFeedbackOnly1  =Learners are not able to see the feedback for the questions
 label.monitoring.noDisplayFeedbackOnly2  =Do you want to allow learners to see the feedback now?
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
+warn.tool.output.change.none  =This will delete all existing marks for this activity. Are you sure?
+output.desc.none  =No score
 
 
-#======= End labels: Exported 222 labels for en AU =====
+#======= End labels: Exported 228 labels for en AU =====
