--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:46:02 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 22:45:27 CST 2018 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -228,6 +228,12 @@ label.displayNoAnswersOrFeedback  =No mostrar respuestas, puntaje o feedback.
 label.monitoring.yesDisplayFeedbackOnly  =Estudiantes pueden ver el feedback pero no las respuestas o el puntaje de las preguntas.
 label.monitoring.noDisplayFeedbackOnly1  =Estudiantes no pueden ver el feedback de las preguntas.
 label.monitoring.noDisplayFeedbackOnly2  =\u00bfQuiere mostrar el feedback de las preguntas ahora?
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por nombre o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
+warn.tool.output.change.none  =Esto borrar\u00e1 todas los puntajes existentes para esta actividad. \u00bfEst\u00e1s seguro?
+output.desc.none  =Sin puntaje
 
 
-#======= End labels: Exported 222 labels for es ES =====
+#======= End labels: Exported 228 labels for es ES =====
