LDEV-4739 updating labels for Noticeboard
Updating English, Greek and Spanish

--- a/lams_tool_nb/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_nb/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = noticeboard
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:02:06 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 22:51:45 CST 2018 
  
 #=================== labels for Noticeboard =================# 
 
@@ -18,7 +18,7 @@ basic.content  =Contenido
 label.filename  =Nombre de Archivo
 label.type  =Tipo
 link.view  =Ver
-message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+message.defineLaterSet  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 button.edit  =Editar
 titleHeading.summary  =Sumario
 titleHeading.statistics  =Estad\u00edsticas
@@ -37,7 +37,7 @@ error.mandatoryField  ={0} campo no puede omitirse
 error.missingParam  =No puede continuar: {0} no se ha encontrado
 error.exception.NbApplication  =Ha ocurrido un error interno en la Cartelera. Por favor reporte el siguiente problema: {0}
 authoring.msg.cancel.save  =Esta seguro que desea cancelar? Sus cambios no seran guardados
-button.try.again  =Refrescar
+button.try.again  =Actualizar
 advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 button.continue  =Continuar
 titleHeading.reflections  =Reflexiones
@@ -49,7 +49,7 @@ message.alertContentEdit  =Advertencia: uno o m\u00e1s estudiantes han accedido 
 label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
-monitor.summary.td.addNotebook  =Agregar anotador al finalizar Cartelera
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.authoring.heading  =Cartelera Edici\u00f3n
 button.submit  =Finalizar
@@ -60,6 +60,11 @@ advanced.comments.like.only  =Con bot\u00f3n de 'Me gusta'
 advanced.comments.like.and.dislike  =Con botones de 'Me gusta' y 'No me gusta'
 advanced.comment.header  =Opciones
 label.activity.completion  =Al finalizar actividad
+advanced.enable.anonymous.posts  =Habilitar opci\u00f3n para publicar mensajes en forma an\u00f3nima.
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por nombre o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 54 labels for es ES =====
+#======= End labels: Exported 59 labels for es ES =====
