LDEV-4739 updating labels for Q and A
Updating English, Greek, Norwegian and Spanish

--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:46:30 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 23:08:48 CST 2018 
  
 #=================== labels for Q&A =================# 
 
@@ -219,6 +219,10 @@ label.other.options  =More settings
 label.allow.review.other.responses  =Allow review other responses?
 label.username  =Username
 label.fullname  =Fullname
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 251 labels for en AU =====
+#======= End labels: Exported 217 labels for en AU =====
