--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:46:29 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 23:08:45 CST 2018 
  
 #=================== labels for Q&A =================# 
 
@@ -154,44 +154,6 @@ textsearch.phrase  =contengan exactamente esta frase:
 textsearch.any.words  =contengan una o mas de estas palabras:
 textsearch.excluded.words  =no contenga ninguna de estas palabras:
 textsearch.questions  =Buscar en las siguientes respuestas:
-pageTitle.admin  =Configuraci\u00f3n de preguntas y respuestas
-admin.enableWizard  =Habilitar el asistente de preguntas y respuestas
-admin.success  =La configuraci\u00f3n ha sido salvada
-admin.return  =Volver a la p\u00e1gina de mantenimiento de LAMS
-wizard.ok  =OK
-wizard.wizardTitle  =Asistente de habilidades cognitivas
-wizard.selectCategory  =Seleccionar categor\u00eda
-wizard.selectSkill  =Seleccionar habilidad cognitiva
-wizard.selectQuestion  =Seleccionar pregunta
-wizard.add  =Agregar
-wizard.addCategory  =Agregar categor\u00eda
-wizard.addSkill  =Agregar habilidad cognitiva
-wizard.addQuestion  =Agregar pregunta
-wizard.add.mustSelectCategory  =Debe seleccionar una categor\u00eda antes de agregar una habilidad cognitiva
-wizard.add.mustSelectSkill  =Debe seleccionar una habilidad cognitiva y una categor\u00eda antes de agregar una pregunta
-wizard.edit  =Editar
-wizard.editCategory  =Editar categor\u00eda
-wizard.edit.notSelected  =Seleccione la categor\u00eda, habilidad cognitiva o pregunta para ser editada.
-wizard.delete  =Borrar
-wizard.delete.warnDeleteCategory  =Borrar esta categor\u00eda tambi\u00e9n borrar\u00e1 todas las preguntas y habilidades cognitivas. Una vez confirmada esta operaci\u00f3n no se podr\u00e1 retractar. \u00bfEst\u00e1 seguro que desea continuar?
-wizard.delete.warnDeleteSkill  =Borrar esta habilidad cognitiva tambien borrara todas las preguntas asociadas con esta. Una vez confirmada esta operaci\u00f3n no se podr\u00e1 retractar. \u00bfEst\u00e1 seguro que desea continuar?
-wizard.delete.warnDeleteQuestion  =\u00bfEsta seguro que desea borrar esta pregunta? Una vez confimada esta operaci\u00f3n no se puede retractar.
-wizard.delete.category  =La categor\u00eda ha sido borrada
-wizard.delete.skill  =La habilidad cognitiva ha sido borrada
-wizard.delete.question  =La pregunta ha sido borrada
-wizard.delete.notselected  =Seleccione el item a borrar primero
-wizard.author.wizardTitle  =Asistente de habilidades cognitivas
-wizard.author.info1  =Este asistente le ayudara a formular la pregunta apropiada.
-wizard.author.info2  =Seleccione una categor\u00eda y luego en el segundo men\u00fa seleccione una habilidad cognitiva.
-wizard.author.info3  =Una vez seleccionada la habilidad cognitiva, el tercer men\u00fa le presentara plantillas de preguntas que usted puede utilizar para plantear sus preguntas.
-wizard.export.export  =Exportar contenido del asistente
-wizard.export.savefirst  =El dise\u00f1o del asistente ha sido modificado, guarde los cambios antes de exportar.
-wizard.import.import  =Importar contenido del asistente
-wizard.import.nofile  =Seleccione archivo .XML a importar
-wizard.import.warn  =\u00bfEsta seguro que quiere importar el contenido del asistente? Importar un nuevo contenido borrar\u00e1 el contenido actual.
-wizard.import.error  =Ha ocurrido un error al importar el contenido del asistente. Asegurese que el archivo .XML que est\u00e1 importando es correcto.
-wizard.editQuestion  =Editar Pregunta
-wizard.editSkill  =Editar Habilidad
 label.allowRichEditor  =Permitir Editor HTML
 label.required.desc  =Esta pregunta requiere una respuesta
 label.required  =(Obligatorio)
@@ -257,6 +219,10 @@ label.other.options  =M\u00e1s opciones
 label.allow.review.other.responses  =Habilitar revisi\u00f3n de respuestas
 label.username  =Usuario
 label.fullname  =Nombre completo
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por nombre o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 251 labels for es ES =====
+#======= End labels: Exported 217 labels for es ES =====
