LDEV-4739 updating labels submit files
Updating Greek, Spanish and English

--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:31:59 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 23:12:24 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
@@ -162,6 +162,10 @@ label.select.leader  =Leader selection
 label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until the leader commences it.
 label.use.select.leader.tool.output  =Use leaders from Leader tool
 label.marks.released  =Marks have been released
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 156 labels for en AU =====
+#======= End labels: Exported 160 labels for en AU =====
