--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:31:58 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 23:12:23 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
@@ -162,6 +162,10 @@ label.select.leader  =Selecci\u00f3n del l\u00edder
 label.waiting.for.leader.launch.time.limit  =L\u00edder no ha comenzado la actividad. Por favor, espere hasta que el l\u00edder comience.
 label.use.select.leader.tool.output  =Utilizar l\u00edderes
 label.marks.released  =Las evaluaciones han sido publicadas
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por nombre o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 156 labels for es ES =====
+#======= End labels: Exported 160 labels for es ES =====
