--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:51:29 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 23:15:39 CST 2018 
  
 #=================== labels for ShareResources =================# 
 
@@ -64,7 +64,6 @@ error.msg.io.exception  =Ha ocurrido una error al subir el archivo. Vuelva a int
 error.msg.invaid.param.upload  =Ha ocurrido un error al subir el archivo. Vuelva a intentar
 error.msg.repository  =Ha ocurrido un error en el repositorio de archivos.
 error.msg.default.content.not.find  =No se ha podido obtener el contenido de defecto para esta herramienta
-msg.no.instruction  =No hay instrucciones disponibles
 authoring.msg.cancel.save  =\u00bfDesea cerrar esta ventana sin guardas cambios?
 label.learning.title  =Recursos Compartidos
 label.learning.heading  =Recursos Compartidos
@@ -182,6 +181,10 @@ label.view.comments  =Ver comentarios
 label.error  =Error
 error.loaderror  =Ha ocurrido un error al cargar la informaci\u00f3n. Si este problema persiste, contacte a su administrador.
 label.ok  =OK
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por nombre o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 176 labels for es ES =====
+#======= End labels: Exported 179 labels for es ES =====
